---
sidebar: sidebar 
permalink: whats-new.html 
keywords: whats new, new features, SANtricity 11.90 
summary: Nuevas funciones del sistema operativo SANtricity. 
---
= Novedades en el sistema operativo SANtricity 11,90
:allow-uri-read: 
:experimental: 
:icons: font
:imagesdir: ./media/


[role="lead"]
En la siguiente tabla, se describen las nuevas funciones de SANtricity System Manager 11,9.



== Nuevas características en la versión 11.90R1

[cols="35h,~"]
|===
| Nueva función | Descripción 


 a| 
Nuevos modelos del sistema de almacenamiento: EF300C y EF600C
 a| 
Esta versión presenta los sistemas de almacenamiento NVMe all-flash EF300C y EF600C. EF300C y EF600C son versiones flash de alta capacidad de los sistemas de almacenamiento EF300 y EF600 actuales. Las unidades SSD NVMe de alta capacidad de tamaños de 30TB TB o 60TB TB son compatibles con EF300C y EF600C. EF300C/EF600C es compatible para uso exclusivo de pools de discos dinámicos sin compatibilidad con RAID heredado.



 a| 
Soporte para interfaces de SAS de 12Gb Gb en EF4000
 a| 
La controladora E4000 ahora admite tarjetas de interfaz del host SAS de 12Gb Gb.

|===


== Nuevas funciones en la versión 11,90

[cols="35h,~"]
|===
| Nueva función | Descripción 


 a| 
Nuevo modelo del sistema de almacenamiento: E4000
 a| 
Esta versión presenta el sistema de almacenamiento de bajo coste E4000. El E4000 admite unidades 12 y 60 y una tarjeta de interfaz del host única (HIC) por controladora. Para la versión inicial, las tarjetas de interfaz del host admitidas incluyen iSCSI y Fibre Channel. Los sistemas de almacenamiento E4000 y otros sistemas de almacenamiento E-Series se pueden ver y gestionar en Unified Manager.



 a| 
Mayor capacidad con pools de discos dinámicos
 a| 